basic message input styling

--- a/client/src/main.sass
+++ b/client/src/main.sass
@@ -17,5 +17,16 @@
   height: 100vh
   display: grid
   grid-template-rows: 1fr auto 1fr
+  flex-grow: 1
+  &__header
+    padding: 8px
   &__container
     overflow-y: scroll
+    min-height: 80vh //FIX LATER
+    padding-bottom: 0
+  &__input
+    display: flex
+    &-tf
+      margin: 0 0 8px 8px
+    &> button
+      border-radius: 0
