--- a/client/src/main.css
+++ b/client/src/main.css
@@ -28,9 +28,32 @@
   display: grid;
   -ms-grid-rows: 1fr auto 1fr;
       grid-template-rows: 1fr auto 1fr;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+}
+
+.message-area__header {
+  padding: 8px;
 }
 
 .message-area__container {
   overflow-y: scroll;
+  min-height: 80vh;
+  padding-bottom: 0;
+}
+
+.message-area__input {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.message-area__input-tf {
+  margin: 0 0 8px 8px;
+}
+
+.message-area__input > button {
+  border-radius: 0;
 }
 /*# sourceMappingURL=main.css.map */
