--- a/client/src/main.sass
+++ b/client/src/main.sass
@@ -24,6 +24,7 @@
     overflow-y: scroll
     min-height: 80vh //FIX LATER
     padding-bottom: 0
+    scrollbar-width: thin
   &__input
     display: flex
     &-tf
