fixed chat grid layout

--- a/client/src/main.sass
+++ b/client/src/main.sass
@@ -16,7 +16,7 @@
   background-color: #FEF9FF
   height: 100vh
   display: grid
-  grid-template-rows: 1fr auto 1fr
+  grid-template-rows: auto 1fr auto
   flex-grow: 1
   &__header
     padding: 8px
