--- a/client/src/main.css
+++ b/client/src/main.css
@@ -26,8 +26,8 @@
   height: 100vh;
   display: -ms-grid;
   display: grid;
-  -ms-grid-rows: 1fr auto 1fr;
-      grid-template-rows: 1fr auto 1fr;
+  -ms-grid-rows: auto 1fr auto;
+      grid-template-rows: auto 1fr auto;
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
