--- a/client/src/main.sass
+++ b/client/src/main.sass
@@ -20,11 +20,34 @@
   flex-grow: 1
   &__header
     padding: 8px
+    margin: 0
+    -webkit-box-shadow: 0px 1px 1px 0px rgba(186,186,186,1);
+    -moz-box-shadow: 0px 1px 1px 0px rgba(186,186,186,1);
+    box-shadow: 0px 1px 1px 0px rgba(186,186,186,1);
   &__container
     overflow-y: scroll
     min-height: 80vh //FIX LATER
     padding-bottom: 0
     scrollbar-width: thin
+  &__message-container
+    display: flex
+    flex-direction: column
+    flex-wrap: wrap
+    &>h2
+      margin: 0
+  &__username
+    font-weight: 600
+    font-size: 1rem
+    margin-right: 4px
+  &__timestamp
+    font-weight: 500
+    font-size: 0.75rem
+    color: rgb(116, 127, 141)
+  &__message
+    word-wrap: break-word
+    white-space: break-spaces
+    font-weight: 500
+    font-size: 1rem
   &__input
     display: flex
     &-tf
