added logo and styling for it

--- a/client/src/main.sass
+++ b/client/src/main.sass
@@ -2,6 +2,19 @@
   background-color: #736CED
   color: white
   font-weight: bold
+  //del
+  &__header
+    padding: 3px 0 0 8px
+    margin: 0
+    color: #E6E6FA
+    text-shadow: 1px 1px 2px #464646;
+    font-size: 1.4rem
+    display: inline-block
+  &__logo
+    height: 2rem
+    padding-right: 2px
+  &__list
+    padding-top: 4px
   &__list-item
     color: #bababa
     &:hover
@@ -19,7 +32,7 @@
   grid-template-rows: auto 1fr auto
   flex-grow: 1
   &__header
-    padding: 8px
+    padding: 12px
     margin: 0
     -webkit-box-shadow: 0px 1px 1px 0px rgba(186,186,186,1);
     -moz-box-shadow: 0px 1px 1px 0px rgba(186,186,186,1);
