--- a/client/src/main.css
+++ b/client/src/main.css
@@ -4,6 +4,24 @@
   font-weight: bold;
 }
 
+.sidebar__header {
+  padding: 3px 0 0 8px;
+  margin: 0;
+  color: #E6E6FA;
+  text-shadow: 1px 1px 2px #464646;
+  font-size: 1.4rem;
+  display: inline-block;
+}
+
+.sidebar__logo {
+  height: 2rem;
+  padding-right: 2px;
+}
+
+.sidebar__list {
+  padding-top: 4px;
+}
+
 .sidebar__list-item {
   color: #bababa;
 }
@@ -34,7 +52,7 @@
 }
 
 .message-area__header {
-  padding: 8px;
+  padding: 12px;
   margin: 0;
   -webkit-box-shadow: 0px 1px 1px 0px #bababa;
   box-shadow: 0px 1px 1px 0px #bababa;
