--- a/client/src/main.sass
+++ b/client/src/main.sass
@@ -37,6 +37,14 @@
     -webkit-box-shadow: 0px 1px 1px 0px rgba(186,186,186,1);
     -moz-box-shadow: 0px 1px 1px 0px rgba(186,186,186,1);
     box-shadow: 0px 1px 1px 0px rgba(186,186,186,1);
+  &__avatar-container
+    display: flex
+    flex-direction: row
+  &__avatar
+    width: 50px
+    height: 50px
+    border-radius: 50%
+    margin-right: 8px
   &__container
     overflow-y: scroll
     min-height: 80vh //FIX LATER
@@ -67,3 +75,4 @@
       margin: 0 0 8px 8px
     &> button
       border-radius: 0
+
