--- a/client/src/main.css
+++ b/client/src/main.css
@@ -58,6 +58,23 @@
   box-shadow: 0px 1px 1px 0px #bababa;
 }
 
+.message-area__avatar-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.message-area__avatar {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  margin-right: 8px;
+}
+
 .message-area__container {
   overflow-y: scroll;
   min-height: 80vh;
