added some error handling

--- a/client/src/main.css
+++ b/client/src/main.css
@@ -130,4 +130,8 @@
 .message-area__input > button {
   border-radius: 0;
 }
+
+.error-404 {
+  padding: 8px;
+}
 /*# sourceMappingURL=main.css.map */
