image embeding added

--- a/client/src/main.css
+++ b/client/src/main.css
@@ -139,8 +139,18 @@
   height: 100vh;
 }
 
+.backdrop {
+  z-index: 1;
+  color: '#fff';
+}
+
 .embed {
-  max-width: 200px;
-  max-height: 200px;
+  max-width: 60vw;
+  max-height: 80vh;
+}
+
+.embed__backdrop {
+  max-width: 90vw;
+  max-height: 90vh;
 }
 /*# sourceMappingURL=main.css.map */
