--- a/client/src/main.sass
+++ b/client/src/main.sass
@@ -80,6 +80,12 @@
   padding: 8px
 .grid-height
   height: 100vh
+.backdrop
+  z-index: 1
+  color: '#fff'
 .embed
-  max-width: 200px;
-  max-height: 200px;
+  max-width: 60vw
+  max-height: 80vh
+  &__backdrop
+    max-width: 90vw
+    max-height: 90vh
