added a link to the image inside of embeds

--- a/client/src/main.sass
+++ b/client/src/main.sass
@@ -83,6 +83,12 @@
 .backdrop
   z-index: 1
   color: '#fff'
+  display: flex
+  flex-direction: column
+  &>a
+    color: white
+    text-decoration: none
+    text-shadow: 1px 1px 1px black
 .embed
   max-width: 60vw
   max-height: 80vh
