--- a/client/src/main.css
+++ b/client/src/main.css
@@ -142,6 +142,19 @@
 .backdrop {
   z-index: 1;
   color: '#fff';
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.backdrop > a {
+  color: white;
+  text-decoration: none;
+  text-shadow: 1px 1px 1px black;
 }
 
 .embed {
