--- a/client/src/main.sass
+++ b/client/src/main.sass
@@ -95,3 +95,13 @@
   &__backdrop
     max-width: 90vw
     max-height: 90vh
+
+.icon
+  &__menu
+    margin-bottom: 3px
+    margin-right: 12px
+  &__menu-exit
+    color: white
+    padding: 10px
+    margin: 6px
+    float: right
