--- a/client/src/main.sass
+++ b/client/src/main.sass
@@ -111,3 +111,30 @@
   &__send
     height: 40px
     width: 40px
+
+
+.landing
+  background-color: #FEF9FF
+  &__container-main
+    margin: 0 auto
+  &__logo
+    max-height: 14rem
+    padding-right: 2px
+  &__header
+    padding: 3px 0 0 8px
+    margin: 100px 0 50px 0
+    color: #736CED
+    text-shadow: 3px 2px 2px #D4C1EC;
+    font-size: 10rem
+    display: inline-block
+    user-select: none
+  &__section
+    margin: 0 auto
+    &-container
+    &:last-of-type
+      margin-bottom: 50px
+
+.img-div
+  height: 200px
+  width: 200px
+  background-color: lightblue
