--- a/client/src/main.sass
+++ b/client/src/main.sass
@@ -48,6 +48,7 @@
     height: 50px
     border-radius: 50%
     margin-right: 8px
+    object-fit: cover
   &__container
     overflow-y: scroll
     min-height: 80vh //FIX LATER
