--- a/client/src/main.sass
+++ b/client/src/main.sass
@@ -29,7 +29,7 @@
         background-color: #6057DA
 
 .message-area
-  background-color: #FEF9FF
+  background-color: white
   height: 100vh
   display: grid
   grid-template-rows: auto 1fr auto
@@ -119,9 +119,23 @@
   margin-bottom: 200px
   &__container-main
     margin: 0 auto
+    & > :nth-child(n+2)
+      @media only screen and (max-width: 601px)
+        margin-right: 20px
+        margin-left: 20px
   &__logo
     max-height: 14rem
     padding-right: 2px
+    @media only screen and (max-width: 1730px)
+      max-height: 12rem
+    @media only screen and (max-width: 1410px)
+      max-height: 10rem
+    @media only screen and (max-width: 1090px)
+      max-height: 8rem
+    @media only screen and (max-width: 900px)
+      max-height: 5rem
+    @media only screen and (max-width: 350px)
+      max-height: 4rem
   &__header
     padding: 3px 0 0 8px
     margin: 100px 0 50px 0
@@ -130,11 +144,21 @@
     font-size: 10rem
     display: inline-block
     user-select: none
+    @media only screen and (max-width: 1730px)
+      font-size: 8rem
+    @media only screen and (max-width: 1410px)
+      font-size: 6rem
+    @media only screen and (max-width: 1080px)
+      font-size: 5rem
+    @media only screen and (max-width: 900px)
+      font-size: 4rem
+    @media only screen and (max-width: 350px)
+      font-size: 3rem
   &__section
     margin: 0 auto
     &-container
       position: relative
-      margin: 50px 0
+      padding: 300px 0
       &:nth-child(even)
         background-color: #F6F6F6
         &:before
@@ -157,12 +181,42 @@
           height: 40px
           background-size: 400px 40px //40 40
           background-image: radial-gradient(ellipse at 200px 50px, transparent 210px, #F6F6F6 13px)
+      &:last-child
+        margin-bottom: 0
+        padding-bottom: 150px
+        &:after
+          display: none
   &__img
     max-height: 400px
     max-width: 600px
-    padding: 28px 40px 28px 20px
+    margin: 28px 40px 28px 20px
+    border: 4px hsla(242,46%,69%,0.2) solid
+    //border: 4px #8e8bd4 solid
+    &-even
+      margin: 28px 20px 28px 40px
+    @media only screen and (max-width: 930px)
+      max-width: 80vw
+    @media only screen and (max-width: 430px)
+      max-width: 90vw
+    @media only screen and (max-width: 1200px)
+      margin: 28px 20px
   &__description
     &-container
-      padding: 0 20px 0 40px
+      & h1
+        font-size: 48px
+        margin-top: 20px
+      & p
+        font-size: 1.25rem
+      &:nth-of-type(odd)
+        padding: 0 20px 0 40px
+      &:nth-of-type(even)
+        padding: 0 40px 0 20px
+    @media only screen and (max-width: 1200px)
+      padding: 0 20px
 body
   background-color: white
+
+.landing__description-wrap
+  flex-wrap: nowrap
+  @media only screen and (max-width: 1200px)
+    flex-wrap: wrap
