--- a/client/src/main.sass
+++ b/client/src/main.sass
@@ -7,7 +7,6 @@
   background-color: #736CED
   color: white
   font-weight: bold
-  //del
   &__header
     padding: 3px 0 0 8px
     margin: 0
@@ -53,7 +52,7 @@
     object-fit: cover
   &__container
     overflow-y: scroll
-    min-height: 80vh //FIX LATER
+    min-height: 80vh
     padding-bottom: 0
     scrollbar-width: thin
   &__message-container
@@ -171,7 +170,7 @@
           right: 0
           background-repeat: repeat
           height: 40px
-          background-size: 400px 40px //40 40
+          background-size: 400px 40px
           background-image: radial-gradient(ellipse at 200px -10px, transparent 210px, #F6F6F6 13px)
         &:after
           content: ""
@@ -181,7 +180,7 @@
           right: 0
           background-repeat: repeat
           height: 40px
-          background-size: 400px 40px //40 40
+          background-size: 400px 40px
           background-image: radial-gradient(ellipse at 200px 50px, transparent 210px, #F6F6F6 13px)
       &:last-child
         margin-bottom: 0
@@ -193,7 +192,6 @@
     max-width: 600px
     margin: 28px 40px 28px 20px
     border: 4px hsla(242,46%,69%,0.2) solid
-    //border: 4px #8e8bd4 solid
     &-even
       margin: 28px 20px 28px 40px
     @media only screen and (max-width: 930px)
