--- a/client/src/main.sass
+++ b/client/src/main.sass
@@ -220,3 +220,13 @@ body
   flex-wrap: nowrap
   @media only screen and (max-width: 1200px)
     flex-wrap: wrap
+
+.login-button
+  //background-color: #736CED
+  background-color: #8383eb
+  //background-color: hsla(243, 78%, 68%)
+  margin-top: 4px
+  &:hover
+    background-color: #6a60e6
+  &:first-of-type
+    margin-top:8px !important
